[package]
name = "hp-ctrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hifitime = "3.6.0"
json_typegen = "0.7.0"
rumqttc = "0.17.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
serde_json = "1.0.87"
time = { version = "0.3.17", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
